[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-multi-asset"
version = "1.0.0"
description = "Interactive Brokers Multi-Asset Trading Setup - Core Library"
authors = [
  { name="José Carlos Gonzáles Tanaka" },
]
requires-python = ">=3.12"
license = "LicenseRef-QuantInsti-QOL-1.1"
license-files = ["LICENSE.md"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "scikit-learn>=1.3",
    "hmmlearn>=0.3.0",
    "ta",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "python-dotenv",
    "scipy>=1.11",
    "pytz",
    "setuptools>=61.0",
    "wheel",
    "yfinance",
    "protobuf==5.29.3",
]

[project.urls]
"Homepage" = "https://github.com/QuantInsti/QuantInsti-Live-Algo-Trading-Setups/tree/main/ibkr-multi-asset"

[tool.setuptools.packages.find]
where = ["src"] # Modified to look for packages within the 'src' directory
